# arduino-cpp-components-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.cpp  library.properties
.github/workflows/: cmake-multi-platform.yml
custom_flightsim_controller/: CMakeLists.txt  ConsumerButtonTester.cpp  ConsumerButtonTester.h  Controller.cpp  Controller.h  ControllerButton.cpp  ControllerButton.h  ControllerRotaryEncoder.cpp  ControllerRotaryEncoder.h  GameController.cpp  GameController.h  KeyboardEmulator.cpp  KeyboardEmulator.h  MouseJiggler.cpp  MouseJiggler.h  MultiFunctionalControl.cpp  MultiFunctionalControl.h  PressButton.cpp  PressButton.h  README.md  custom_flightsim_controller.ino
custom_flightsim_controller/dcs_control/: Library.kicad_sym  dcs_control.kicad_pro  dcs_control.kicad_sch
custom_flightsim_controller/kicad_schematics/: custom_flightsim_controller.kicad_sch
custom_midi_controller/: custom_midi_controller.ino
custom_midi_controller/custom_midi_controller/: custom_midi_controller.kicad_prl  custom_midi_controller.kicad_pro  custom_midi_controller.kicad_sch
dcs_control/: dcs_control.ino
dcs_control/dcs_control/: dcs_control.kicad_pro  dcs_control.kicad_sch
examples/Button/: Button.ino
examples/DigitalLed/: DigitalLed.ino
examples/RotaryEncoder/: RotaryEncoder.ino
peripherals_library/: KeyboardControl.h  MouseControl.h  VolumeControl.h  library.properties
src/: CMakeLists.txt  Callback.cpp  Component.cpp  ComponentsComposition.h  CppComponents.h  CppComponentsLibrary.cpp  CppComponentsLibrary.h  DigitalOutputPin.h  HwApiImpl.cpp  HwApiImpl.h  InputPinConfig.cpp  InputPinConfig.h  RotaryEncoder.cpp  RotaryEncoder.h  Scheduler.cpp
support_library/: CMakeLists.txt  Callback.cpp  Callback.h  CallbackApi.cpp  CallbackApi.h  Control.cpp  Control.h  ControllerBuilder.cpp  ControllerBuilder.h  DeviceApi.cpp  DeviceApi.h  DigitalPin.cpp  DigitalPin.h  GenericController.h  Hardware.cpp  Hardware.h  HeapObject.cpp  HeapObject.h  HwApi.h  HwApiImpl.cpp  HwApiImpl.h  README.md  RotaryEncoder.cpp  RotaryEncoder.h  RotaryEncoderPin.cpp  RotaryEncoderPin.h  Scheduler.cpp  Scheduler.h  SchedulerTask.cpp  SchedulerTask.h  SchedulerTest.cpp  library.properties
support_library/peripherals_library/: VolumeControl.cpp  VolumeControl.h
support_library/src/: Button.cpp  Button.h  CMakeLists.txt  ComponentsComposition.cpp  ComponentsComposition.h  Device.h  DeviceApi.h  DevicesLibrary.h  DigitalInputPin.cpp  DigitalInputPin.h  DigitalLed.cpp  DigitalLed.h  DigitalOutputPin.cpp  DigitalOutputPin.h  DigitalPin.cpp  DigitalPin.h  GenericController.cpp  GenericController.h  HwApi.cpp  HwApi.h  Pin.cpp  Pin.h  RotaryEncoder.cpp  RotaryEncoder.h  Utilities.h
support_library/src/components/: CMakeLists.txt  Component.h  ComponentApi.cpp  ComponentApi.h  RotaryEncoder.cpp  RotaryEncoder.h
support_library/src/devices/: CMakeLists.txt  Device.cpp  GenericController.h
support_library/src/interfaces/: CMakeLists.txt
support_library/src/peripherals/: VolumeControl.cpp  VolumeControl.h
support_library/src/pins/: CMakeLists.txt  DigitalInputPin.cpp  DigitalPin.cpp  DigitalPin.h  PinApi.h
support_library/src/utilities/: CMakeLists.txt
support_library/test/: ButtonTest.cpp  CMakeLists.txt  DeviceBuilderTest.cpp  DigitalInputPinTest.cpp  DigitalLedTest.cpp  DigitalPinTest.cpp  GenericControllerTest.cpp  HeapObjectTest.cpp  HwApiMock.cpp  HwApiMock.h  RotaryEncoderTest.cpp  SchedulerTest.cpp
test/: CMakeLists.txt  DigitalInputPinTest.cpp  DigitalOutputPinTest.cpp  HwApiMock.h  RotaryEncoderTest.cpp
traffic_light/: traffic_light.ino
volume_control_and_pc_busy_simulator/: CMakeLists.txt  README.md  RotaryEncoderPinImpl.cpp  RotaryEncoderPinImpl.h  volume_control_and_pc_busy_simulator.ino
volume_control_and_pc_busy_simulator/schematic/: schematic.kicad_pcb  schematic.kicad_pro  schematic.kicad_sch
